fix(postlist): post date more contrast

--- a/src/components/postList.module.scss
+++ b/src/components/postList.module.scss
@@ -14,7 +14,7 @@
 }
 
 .header_meta {
-  color: #838e96;
+  color: #535a5f;
   font-size: 0.9rem;
 }
 
